[build-system]
requires = ["setuptools>=40.6.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jt"
version = "0.1.0"
description = "Template"
# authors = [
#     { name="Your Name", email="you@example.com" }
# ]
license = { file="LICENSE" }
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
  "jinja2"
]

[project.scripts]
jt = "jt:main"
